chevereto-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chevereto
  labels:
    app: chevereto
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: chevereto
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: chevereto-mysql
  namespace: chevereto
  labels:
    app: database
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  type: ClusterIP
  selector:
    app: database
